--- a/myface-onface-html/src/assets/less/style/block/icon.less
+++ b/myface-onface-html/src/assets/less/style/block/icon.less
@@ -177,6 +177,42 @@
         }
     }
 }
+.cate-dtlk-dienthoai {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/dtlk-dienthoai.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/dtlk-dienthoai-hover.png);
+            }
+        }
+    }
+}
+.cate-dtlk-maytinhbang {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/dtlk-maytinhbang.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/dtlk-maytinhbang-hover.png);
+            }
+        }
+    }
+}
+.cate-dtlk-phukien {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/dtlk-phukien.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/dtlk-phukien-hover.png);
+            }
+        }
+    }
+}
 /*cate laptop*/
 .cate-lt {
     .cate-icon {
@@ -186,6 +222,54 @@
         &:hover {
             .cate-icon {
                 background-image: url(../images/icons/cate-icon/lt-hover.png);
+            }
+        }
+    }
+}
+.cate-lt-maytinh {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/lt-maytinh.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/lt-maytinh-hover.png);
+            }
+        }
+    }
+}
+.cate-lt-thietbimaytinh {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/lt-thietbimaytinh.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/lt-thietbimaytinh-hover.png);
+            }
+        }
+    }
+}
+.cate-lt-thietbimang {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/lt-thietbimang.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/lt-thietbimang-hover.png);
+            }
+        }
+    }
+}
+.cate-lt-thietbivanphong {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/lt-thietbivanphong.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/lt-thietbivanphong-hover.png);
             }
         }
     }
@@ -203,6 +287,66 @@
         }
     }
 }
+.cate-mp-trangdiem {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/mp-trangdiem.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/mp-trangdiem-hover.png);
+            }
+        }
+    }
+}
+.cate-mp-chamsocda {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/mp-chamsocda.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/mp-chamsocda-hover.png);
+            }
+        }
+    }
+}
+.cate-mp-chamsoctoc {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/mp-chamsoctoc.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/mp-chamsoctoc-hover.png);
+            }
+        }
+    }
+}
+.cate-mp-nuochoa {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/mp-nuochoa.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/mp-nuochoa-hover.png);
+            }
+        }
+    }
+}
+.cate-mp-rangmieng {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/mp-rangmieng.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/mp-rangmieng-hover.png);
+            }
+        }
+    }
+}
 /*cate hàng tiêu dùng*/
 .cate-htd {
     .cate-icon {
@@ -212,6 +356,54 @@
         &:hover {
             .cate-icon {
                 background-image: url(../images/icons/cate-icon/htd-hover.png);
+            }
+        }
+    }
+}
+.cate-htd-dodungnhabep {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/htd-dodungnhabep.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/htd-dodungnhabep-hover.png);
+            }
+        }
+    }
+}
+.cate-htd-thietbinghenhin {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/htd-thietbinghenhin.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/htd-thietbinghenhin-hover.png);
+            }
+        }
+    }
+}
+.cate-htd-thietbigiadinh {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/htd-thietbigiadinh.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/htd-thietbigiadinh-hover.png);
+            }
+        }
+    }
+}
+.cate-htd-dolanh {
+    .cate-icon {
+        background-image: url(../images/icons/cate-icon/htd-dolanh.png);
+    }
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/htd-dolanh-hover.png);
             }
         }
     }
