--- a/myface-onface-html/src/assets/less/style/block/icon.less
+++ b/myface-onface-html/src/assets/less/style/block/icon.less
@@ -4,7 +4,6 @@
     margin-bottom: 2px;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: auto 100%;
 }
 /*cate thời trang*/
 .cate-tt {
@@ -396,14 +395,14 @@
         }
     }
 }
-.cate-htd-dolanh {
+.cate-htd-dienlanh {
     .cate-icon {
-        background-image: url(../images/icons/cate-icon/htd-dolanh.png);
+        background-image: url(../images/icons/cate-icon/htd-dienlanh.png);
     }
     > a {
         &:hover {
             .cate-icon {
-                background-image: url(../images/icons/cate-icon/htd-dolanh-hover.png);
+                background-image: url(../images/icons/cate-icon/htd-dienlanh-hover.png);
             }
         }
     }
