--- a/myface-onface-html/src/views/block/_header-user-shop.html
+++ b/myface-onface-html/src/views/block/_header-user-shop.html
@@ -86,7 +86,7 @@
 											<span>Nhớ tài khoản</span>
 			            	</label>
 			            </div>
-			            <a class="lg-a-text pull-right" href="forgot-pass.html">Quên mật khẩu?</a>
+			            <a class="lg-a-text pull-right" href="" data-toggle="modal" data-target="#forgetpass-modal">Quên mật khẩu?</a>
 			           </li>
 		            <li class="form-group lg-row-5">
 		            	<input type="submit" class="btn btn-primary lg-button" value="Đăng nhập">
