--- a/myface-onface-html/src/views/layout/_layout-myface-user.html
+++ b/myface-onface-html/src/views/layout/_layout-myface-user.html
@@ -8,10 +8,11 @@
 {% block page-container %}{% endblock %}
 <!--footer-->
 {% block footer%}
-{% include "../block/_footer.html" %}
+{% include "../block/_footer-user-shop.html" %}
 {% endblock %}
 <!--modal-->
 {% block modal%}
 {% include "../block/modal/_alert-modal.html" %}
 {% include "../block/modal/_yes-no-modal.html" %}
+{% include "../block/modal/_forgetpass-modal.html" %}
 {% endblock %}
