--- a/myface-onface-html/src/assets/less/style/page/register.less
+++ b/myface-onface-html/src/assets/less/style/page/register.less
@@ -187,3 +187,127 @@
 		margin-top: -40px;
   }
 }
+.forgetpass-modal {
+  text-align: center;
+  .modal-header {
+    height: 60px;
+    border-bottom: 0;
+    background-color: @bg-color-2;
+    border-radius: 6px 6px 0 0;
+    .close {
+      margin-top: -8px;
+      margin-right: -5px;
+      font-size: 16px;
+    }
+    .modal-title {
+      font-size: 20px;
+      font-weight: 600;
+      color: @text-color-1;
+    }
+  }
+  .modal-body {
+    padding: 10px 10px 0;
+  }
+  .modal-dialog {
+    @media (min-width: @screen-md-min) {
+      width: 320px;
+      margin-top: 10%;
+    }
+  }
+}
+.forgetpass-form {
+  width: 100%;
+  margin-top: 10px;
+  p {
+    color: @text-color-2;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-bottom: 25px;
+  }
+  .form-group {
+    width: 100%;
+    margin-bottom: 10px;
+    input {
+      height: 40px;
+    }
+  }
+  .btn {
+    width: 100%;
+    font-weight: 600;
+    font-size: 16px;
+  }
+}
+.resetting-pass {
+  width: 100%;
+  min-height: 100%;
+  background-color: @bg-color-2;
+  .logo-icon {
+    width: 100%;
+    &:before {
+      content: "";
+      width: 119px;
+      height: 41px;
+      display: block;
+      margin: 0 auto;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-image: url(../images/icons/logo-icon.png);
+    }
+  }
+  .forgetpass-form {
+    width: 100%;
+    margin: 127px auto 0;
+    .form-title {
+      width: 100%;
+      display: block;
+      text-align: center;
+      font-size: 24px;
+      margin-bottom: 30px;
+      margin-top: 16px;
+    }
+    .form-inner {
+      background-color: #fff;
+      padding: 15px 10px 10px;
+      border-radius: 4px;
+      .control-label {
+        color: @text-color-2;
+        font-weight: normal;
+      }
+    }
+    .form-group {
+      margin-bottom: 10px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+    .input-group {
+      .input-group-addon {
+        border-color: @line-color-1;
+        border-radius: 3px 0 0 3px;
+        border-right: 0;
+        color: @gray;
+      }
+      .form-control {
+        border-left: 0;
+        padding-left: 0;
+        &:focus {
+          border-color: @line-color-1;
+        }
+      }
+    }
+    .cancel-btn {
+      text-align: center;
+      margin-top: 18px;
+      font-size: 16px;
+      a {
+        color: @text-color-2;
+        &:hover {
+          color: @primary-color;
+        }
+      }
+    }
+    @media (min-width: @screen-md-min) {
+      width: 320px;
+    }
+  }
+}
