--- a/myface-onface-html/src/views/layout/_layout-myface-shop.html
+++ b/myface-onface-html/src/views/layout/_layout-myface-shop.html
@@ -14,4 +14,5 @@
 {% block modal%}
 {% include "../block/modal/_alert-modal.html" %}
 {% include "../block/modal/_yes-no-modal.html" %}
+{% include "../block/modal/_forgetpass-modal.html" %}
 {% endblock %}
