--- a/myface-onface-html/src/assets/less/style/block/icon.less
+++ b/myface-onface-html/src/assets/less/style/block/icon.less
@@ -4,6 +4,16 @@
     margin-bottom: 2px;
     background-repeat: no-repeat;
     background-position: center center;
+    background-image: url(../images/icons/cate-icon/iconmd.png);
+}
+.cate-item {
+    > a {
+        &:hover {
+            .cate-icon {
+                background-image: url(../images/icons/cate-icon/iconmd-hover.png);
+            }
+        }
+    }
 }
 /*cate thời trang*/
 .cate-tt {
@@ -117,24 +127,24 @@
 }
 .cate-mb-dodungbe {
     .cate-icon {
-        background-image: url(../images/icons/cate-icon/mp-dodungbe.png);
+        background-image: url(../images/icons/cate-icon/mb-dodungbe.png);
     }
     > a {
         &:hover {
             .cate-icon {
-                background-image: url(../images/icons/cate-icon/mp-dodungbe-hover.png);
+                background-image: url(../images/icons/cate-icon/mb-dodungbe-hover.png);
             }
         }
     }
 }
 .cate-mb-dochoibe {
     .cate-icon {
-        background-image: url(../images/icons/cate-icon/mb.png);
+        background-image: url(../images/icons/cate-icon/mb-dochoibe.png);
     }
     > a {
         &:hover {
             .cate-icon {
-                background-image: url(../images/icons/cate-icon/mb-hover.png);
+                background-image: url(../images/icons/cate-icon/mb-dochoibe-hover.png);
             }
         }
     }
