--- a/myface-onface-html/src/assets/less/style/buttons.less
+++ b/myface-onface-html/src/assets/less/style/buttons.less
@@ -167,6 +167,9 @@
     margin-top: 1px;
     background: url(../images/icons/buy.png) no-repeat center center;
   }
+  @media (max-width: @screen-md-max) {
+    margin-bottom: 10px;
+  }
 }
 .btn-add-cart {
   position: relative;
