--- a/myface-onface-html/src/assets/less/style/modal.less
+++ b/myface-onface-html/src/assets/less/style/modal.less
@@ -9,7 +9,7 @@
 	.modal-dialog {
 		width: 682px;
 	}
-	.modal-content { 
+	.modal-content {
 		.box-shadow(0 1px 1px rgba(255, 255, 255, .1));
 		.border-radius(@box-border-radius);
 		border-color: transparent;
@@ -68,6 +68,7 @@
 		background-color: @bg-color-4;
 		p {
 			margin: 0;
+            color: @text-color-2;
 		}
 	}
 }
