--- a/myface-onface-html/src/assets/less/style/page/myface-user.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-user.less
@@ -6,13 +6,13 @@
 		margin-top: -3px;
 	}
 	.back-to-myface {
-		position: absolute; 
-		top: 0; 
-		left: 15px; 
-		display: block; 
-		width:30px; 
-		height: 44px; 
-		display: table-cell; 
+		position: absolute;
+		top: 0;
+		left: 15px;
+		display: block;
+		width:30px;
+		height: 44px;
+		display: table-cell;
 		vertical-align: middle;
 		color: @text-color-1;
 		&:hover {
@@ -32,9 +32,9 @@
 		}
 	}
 	.user-shop-logo {
-		width: 120px; 
+		width: 120px;
 		height: 45px;
-		padding-left: 30px; 
+		padding-left: 30px;
 		display: table-cell;
 		vertical-align: middle;
 		color: @text-color-1;
@@ -52,12 +52,15 @@
 		margin-bottom: 0;
 	}
 	.bread-crumb-item {
+    a {
+      color: @text-color-2;
+    }
 		& + li {
 			&:before {
 				position: absolute;
-				top: 17px;
-				left: -2px;
-		    color: @text-color-1;
+				top: 12px;
+				left: -3px;
+		    color: @text-color-2;
 		    content: "/\00a0";
 			}
 		}
