--- a/myface-onface-html/src/assets/less/style/page/register.less
+++ b/myface-onface-html/src/assets/less/style/page/register.less
@@ -279,20 +279,11 @@
       &:last-child {
         margin-bottom: 0;
       }
-    }
-    .input-group {
-      .input-group-addon {
-        border-color: @line-color-1;
-        border-radius: 3px 0 0 3px;
-        border-right: 0;
-        color: @gray;
-      }
-      .form-control {
-        border-left: 0;
-        padding-left: 0;
-        &:focus {
-          border-color: @line-color-1;
-        }
+      input[type="password"] {
+        padding-left: 36px;
+        background-image: url(../images/icons/pass.png);
+        background-repeat: no-repeat;
+        background-position: 13px 13px;
       }
     }
     .cancel-btn {
