--- a/myface-onface-html/src/views/block/modal/_order-success-modal.html
+++ b/myface-onface-html/src/views/block/modal/_order-success-modal.html
@@ -23,7 +23,7 @@
       </div>
       <div class="box-footer clearfix">
         <div class="modal-footer">
-          <p class="text-center">Hổ trợ từ myFace Shop: 1900 636 798. Hổ trợ từ Shop: (08) 8745 479 - 0989 999 888 <br> (Từ 8:00 - 22:00 tất cả các ngày)</p>
+            <p class="text-center">Hổ trợ từ myFace Shop: <strong>1900 636 798</strong>. Hổ trợ từ Shop: <strong>(08) 8745 479 - 0989 999 888</strong> <br> (Từ 8:00 - 22:00 tất cả các ngày)</p>
         </div>
       </div>
     </div>
