--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -364,17 +364,42 @@
 	}
 }
 .breadcrumbs-nav {
-    .navbar {
-        min-width: 0;
-        position: relative;
-        overflow-x: auto;
-        overflow-y: hidden;
-        -webkit-overflow-scrolling: touch;
-        white-space: nowrap;
-        width: 100%;
-        -ms-overflow-style: none;
-        overflow-y: -moz-scrollbars-none;
+  margin-bottom: 28px;
+  .navbar {
+    min-width: 0;
+    min-height: 40px;
+    width: 100%;
+    height: 40px;
+    position: relative;
+    white-space: nowrap;
+    > ul {
+      > li {
+        > a {
+          padding: 10px 0;
+          .fa-home {
+            &:before {
+              content: "";
+            }
+            width: 18px;
+            height: 20px;
+            display: block;
+            background-image: url(../images/icons/home.png);
+            background-repeat: no-repeat;
+            background-position: center;
+          }
+        }
+        &:nth-child(2) {
+          padding: 9px 0;
+          > a {
+            padding: 0 10px;
+            background: #fff;
+            border: @border;
+            border-radius: 3px;
+          }
+        }
+      }
     }
+  }
 }
 .shopper-menu {
     @media (max-width: @screen-sm-max) {
@@ -430,6 +455,7 @@
 		.cate-name {
 			color: @text-color-2;
             text-transform: lowercase;
+            margin-top: 5px;
             &:first-letter {
                 text-transform: uppercase;
             }
