--- a/myface-onface-html/src/assets/less/style/page/myface-cate.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-cate.less
@@ -1,5 +1,7 @@
 .category-1-name {
 	width: 100%;
+    margin-top: 35px;
+    margin-bottom: 20px;
 	font-size: 30px;
 	font-weight: bold;
 	text-align: center;
@@ -7,6 +9,9 @@
 	float: left;
 }
 .catebar {
+    .category-nav {
+        margin-bottom: 15px;
+    }
 	.cate-list {
 		width: 100%;
 		height: 90px;
@@ -23,11 +28,17 @@
         overflow-y: -moz-scrollbars-none;
 	}
 	.cate-item {
-		margin-right: 20px;
+		margin-right: 18px;
 		display: inline-block;
 		float: none;
+        white-space: normal;
         .cate-icon {
             height: 32px;
+            margin-bottom: 0;
+        }
+        .cate-name {
+            line-height: 14px;
+            margin-top: 10px;
         }
 		> a {
 			width: 90px;
@@ -94,6 +105,13 @@
 		&.filter-property {
 			margin-right: 0;
 		}
+        &.filter-menu {
+            .tab-item {
+                a {
+                    font-weight: normal;
+                }
+            }
+        }
 	}
 	.filter-property {
 		float: right;
